--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "driver-finance-app",
   "version": "1.0.0",
   "private": true,
-  "main": "expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -69,7 +69,7 @@
     "@react-navigation/native": "^6.1.0",
     "@react-navigation/bottom-tabs": "^6.5.0",
     "@react-navigation/stack": "^6.3.0",
-    "react-native-screens": "~3.31.0",
+    "react-native-screens": "3.31.1",
     "react-native-safe-area-context": "4.10.5",
     "expo-notifications": "~0.28.0",
     "expo-location": "~17.0.0",
@@ -78,7 +78,14 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "react-native-paper": "^5.12.0",
     "react-native-vector-icons": "^10.0.0",
-    "expo-status-bar": "~1.12.0"
+    "expo-status-bar": "~1.12.1",
+    "expo-router": "~3.5.24",
+    "expo-linking": "~6.3.1",
+    "expo-constants": "~16.0.2",
+    "expo-auth-session": "~5.5.2",
+    "expo-crypto": "~13.0.2",
+    "expo-web-browser": "~13.0.3",
+    "expo-apple-authentication": "~6.4.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
