--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "private": true,
   "main": "expo-router/entry",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -13,6 +11,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.0",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
@@ -41,61 +40,58 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/bottom-tabs": "^6.5.0",
+    "@react-navigation/native": "^6.1.0",
+    "@react-navigation/stack": "^6.3.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "^3.0.0",
     "embla-carousel-react": "8.5.1",
+    "expo": "~51.0.0",
+    "expo-apple-authentication": "~6.4.2",
+    "expo-auth-session": "~5.5.2",
+    "expo-constants": "~16.0.2",
+    "expo-crypto": "~13.0.2",
+    "expo-linking": "~6.3.1",
+    "expo-location": "~17.0.0",
+    "expo-notifications": "~0.28.0",
+    "expo-router": "~3.5.24",
+    "expo-status-bar": "~1.12.1",
+    "expo-web-browser": "~13.0.3",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "14.2.25",
     "next-themes": "^0.4.6",
     "react": "18.2.0",
     "react-day-picker": "9.8.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.60.0",
+    "react-native": "0.74.5",
+    "react-native-paper": "^5.12.0",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
+    "react-native-vector-icons": "^10.0.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
-    "zod": "3.25.67",
-    "expo": "~51.0.0",
-    "react-native": "0.74.5",
-    "@expo/vector-icons": "^14.0.0",
-    "@react-navigation/native": "^6.1.0",
-    "@react-navigation/bottom-tabs": "^6.5.0",
-    "@react-navigation/stack": "^6.3.0",
-    "react-native-screens": "3.31.1",
-    "react-native-safe-area-context": "4.10.5",
-    "expo-notifications": "~0.28.0",
-    "expo-location": "~17.0.0",
-    "react-native-svg": "15.2.0",
     "victory-native": "^37.0.0",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "react-native-paper": "^5.12.0",
-    "react-native-vector-icons": "^10.0.0",
-    "expo-status-bar": "~1.12.1",
-    "expo-router": "~3.5.24",
-    "expo-linking": "~6.3.1",
-    "expo-constants": "~16.0.2",
-    "expo-auth-session": "~5.5.2",
-    "expo-crypto": "~13.0.2",
-    "expo-web-browser": "~13.0.3",
-    "expo-apple-authentication": "~6.4.2"
+    "zod": "3.25.67"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.0",
     "@tailwindcss/postcss": "^4.1.9",
-    "@types/node": "^22",
     "@types/react": "~18.2.79",
     "@types/react-dom": "~18.2.25",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
-    "typescript": "~5.3.3",
-    "@babel/core": "^7.20.0"
+    "typescript": "~5.3.3"
   }
 }
